Fixed font URLs for Vercel2

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -22,71 +22,68 @@ body, html {
 
 }
 
-/* Fonts */
 @font-face {
-    font-family: 'Recoleta Alt Black';
-    src: url('fonts/Recoleta Alt Black.otf') format('opentype');
-    font-weight: 900; /* Adjust weight accordingly */
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Recoleta Alt Semibold';
-    src: url('fonts/Recoleta Alt SemiBold.otf') format('opentype');
-    font-weight: 600; /* Adjust weight accordingly */
-    font-style: normal;
-}
-
-@font-face {
-  font-family: 'HelveticaNeueMedium';
-  src: url('fonts/HelveticaNeueMedium.otf') format('opentype');
-  font-weight: 600; /* Adjust weight accordingly */
+  font-family: 'Recoleta Alt Black';
+  src: url('/fonts/Recoleta Alt Black.otf') format('opentype');
+  font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'HelveticaNeueHeavy';
-  src: url('fonts/HelveticaNeueHeavy.otf') format('opentype');
-  font-weight: 600; /* Adjust weight accordingly */
+  font-family: 'Recoleta Alt Semibold';
+  src: url('/fonts/Recoleta Alt SemiBold.otf') format('opentype');
+  font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'HelveticaNeueBold';
-  src: url('fonts/HelveticaNeueBold.otf') format('opentype');
-  font-weight: 600; /* Adjust weight accordingly */
-  font-style: normal;
+font-family: 'HelveticaNeueMedium';
+src: url('/fonts/HelveticaNeueMedium.otf') format('opentype');
+font-weight: 600;
+font-style: normal;
 }
 
 @font-face {
-  font-family: 'HelveticaNeueRoman';
-  src: url('fonts/HelveticaNeueRoman.otf') format('opentype');
-  font-weight: 600; /* Adjust weight accordingly */
-  font-style: normal;
+font-family: 'HelveticaNeueHeavy';
+src: url('/fonts/HelveticaNeueHeavy.otf') format('opentype');
+font-weight: 600;
+font-style: normal;
 }
 
 @font-face {
-  font-family: 'HelveticaNeueLight';
-  src: url('fonts/HelveticaNeueLight.otf') format('opentype');
-  font-weight: 600; /* Adjust weight accordingly */
-  font-style: normal;
+font-family: 'HelveticaNeueBold';
+src: url('/fonts/HelveticaNeueBold.otf') format('opentype');
+font-weight: 600;
+font-style: normal;
 }
 
 @font-face {
-  font-family: 'Miller_Display_Bold';
-  src: url('fonts/fonnts.com-Miller_Display_Bold.otf') format('opentype');
-  font-weight: 600; /* Adjust weight accordingly */
-  font-style: normal;
+font-family: 'HelveticaNeueRoman';
+src: url('/fonts/HelveticaNeueRoman.otf') format('opentype');
+font-weight: 600;
+font-style: normal;
 }
 
 @font-face {
-  font-family: 'Miller_Display_Roman';
-  src: url('fonts/fonnts.com-Miller_Display_Roman.otf') format('opentype');
-  font-weight: 600; /* Adjust weight accordingly */
-  font-style: normal;
+font-family: 'HelveticaNeueLight';
+src: url('/fonts/HelveticaNeueLight.otf') format('opentype');
+font-weight: 600;
+font-style: normal;
 }
 
+@font-face {
+font-family: 'Miller_Display_Bold';
+src: url('/fonts/fonnts.com-Miller_Display_Bold.otf') format('opentype');
+font-weight: 600;
+font-style: normal;
+}
 
+@font-face {
+font-family: 'Miller_Display_Roman';
+src: url('/fonts/fonnts.com-Miller_Display_Roman.otf') format('opentype');
+font-weight: 600;
+font-style: normal;
+}
 
 /* General Styles */
 body {
