--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -37,39 +37,40 @@ body, html {
 }
 
 @font-face {
-font-family: 'HelveticaNeueMedium';
-src: url('/fonts/HelveticaNeueMedium.otf') format('opentype');
-font-weight: 600;
-font-style: normal;
+  font-family: 'HelveticaNeueMedium';
+  src: url('/fonts/HelveticaNeueMedium.otf') format('opentype');
+  font-weight: 500; /* Adjust if needed */
+  font-style: normal;
 }
 
 @font-face {
-font-family: 'HelveticaNeueHeavy';
-src: url('/fonts/HelveticaNeueHeavy.otf') format('opentype');
-font-weight: 600;
-font-style: normal;
+  font-family: 'HelveticaNeueHeavy';
+  src: url('/fonts/HelveticaNeueHeavy.otf') format('opentype');
+  font-weight: 900; /* Heavy is usually 900 */
+  font-style: normal;
 }
 
 @font-face {
-font-family: 'HelveticaNeueBold';
-src: url('/fonts/HelveticaNeueBold.otf') format('opentype');
-font-weight: 600;
-font-style: normal;
+  font-family: 'HelveticaNeueBold';
+  src: url('/fonts/HelveticaNeueBold.otf') format('opentype');
+  font-weight: 700; /* Bold is usually 700 */
+  font-style: normal;
 }
 
 @font-face {
-font-family: 'HelveticaNeueRoman';
-src: url('/fonts/HelveticaNeueRoman.otf') format('opentype');
-font-weight: 600;
-font-style: normal;
+  font-family: 'HelveticaNeueRoman';
+  src: url('/fonts/HelveticaNeueRoman.otf') format('opentype');
+  font-weight: 400; /* Roman is usually normal weight */
+  font-style: normal;
 }
 
 @font-face {
-font-family: 'HelveticaNeueLight';
-src: url('/fonts/HelveticaNeueLight.otf') format('opentype');
-font-weight: 600;
-font-style: normal;
+  font-family: 'HelveticaNeueLight';
+  src: url('/fonts/HelveticaNeueLight.otf') format('opentype');
+  font-weight: 300; /* Light is usually 300 */
+  font-style: normal;
 }
+
 
 @font-face {
 font-family: 'Miller_Display_Bold';
